--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     /* HERO */
     .hero{
-      height: 100vh;
+      min-height: 80vh;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -111,7 +111,7 @@
 
     .titulo-ronvel{
       font-family: 'Merriweather', serif;
-      font-size: clamp(2.8rem, 6vw, 4rem);
+      font-size: clamp(2.5rem, 6vw, 4rem);
       font-weight: 700;
       margin-bottom: 18px;
       letter-spacing: 1.5px;
@@ -128,7 +128,7 @@
 
     .subtitulo-ronvel{
       font-family: "Poppins", sans-serif;
-      font-size: clamp(1.05rem, 2.4vw, 1.4rem);
+      font-size: clamp(1rem, 2.4vw, 1.3rem);
       font-weight: 400;
       color: rgba(245,245,245,0.92);
       max-width: 880px;
@@ -152,12 +152,12 @@
 
     /* SECCIONES */
     section{
-      padding: 90px 20px;
+      padding: clamp(60px,6vw,120px) 20px;
       text-align: center;
       scroll-margin-top: 90px;
     }
     section h2{
-      font-size: 2.2rem;
+      font-size: clamp(1.8rem, 4vw, 2.2rem);
       margin-bottom: 28px;
       color: var(--azul);
       font-weight: 700;
@@ -176,6 +176,7 @@
       color: var(--texto-claro);
       background: url('images/font.jpg') no-repeat center center/cover;
       overflow: hidden;
+      min-height: clamp(50vh, 60vw, 60vh);
     }
     .bg-elegante::before{
       content: "";
@@ -192,6 +193,7 @@
       color: var(--texto-claro);
       background: url('images/foto2.jpg') no-repeat center center/cover;
       overflow: hidden;
+      min-height: clamp(50vh, 60vw, 60vh);
     }
     .bg-nosotros::before{
       content: "";
@@ -209,10 +211,12 @@
       justify-content: center;
       gap: 36px;
       flex-wrap: wrap;
+      padding: 20px;
     }
     .nosotros img{
-      width: 380px;
-      height: 260px;
+      width: 100%;
+      max-width: 380px;
+      height: auto;
       object-fit: cover;
       border-radius: 14px;
       box-shadow: 0 10px 28px rgba(0,0,0,0.55);
@@ -229,7 +233,7 @@
     }
     .nosotros p{
       max-width: 540px;
-      font-size: 1.08rem;
+      font-size: clamp(1rem,2vw,1.08rem);
       text-align: justify;
       line-height: 1.7;
       color: #e8edf3;
@@ -241,9 +245,11 @@
       justify-content: center;
       gap: 22px;
       flex-wrap: wrap;
+      padding: 20px 0;
     }
     .servicio{
-      width: 260px;
+      flex: 1 1 250px;
+      max-width: 300px;
       padding: 22px;
       border-radius: 14px;
       background: rgba(255,255,255,0.06);
@@ -251,6 +257,9 @@
       box-shadow: 0 12px 30px rgba(0,0,0,0.45);
       backdrop-filter: blur(6px);
       transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     .servicio:hover{
       transform: translateY(-8px) scale(1.03);
@@ -272,11 +281,12 @@
       margin-bottom: 8px;
       color: var(--amarillo);
       transition: color 0.3s ease;
+      text-align: center;
     }
     .servicio:hover h3{
       color: #ffd60a;
     }
-    .servicio p{ color: #e8edf3; }
+    .servicio p{ color: #e8edf3; text-align: center; }
     .precio{
       margin-top: 10px;
       font-weight: 700;
@@ -284,11 +294,11 @@
     }
 
     /* CONTACTO */
-    .contacto p{ margin: 8px 0; color: #e8edf3; font-size: 1.03rem; }
+    .contacto p{ margin: 8px 0; color: #e8edf3; font-size: clamp(1rem,2vw,1.03rem); }
     .contacto .direccion a{ color: #fff; text-decoration: underline; font-weight: 600; }
 
     .redes{ margin-top: 18px; }
-    .redes h3{ color: var(--amarillo); margin-bottom: 14px; font-size: 1.3rem; }
+    .redes h3{ color: var(--amarillo); margin-bottom: 14px; font-size: clamp(1.1rem,2vw,1.3rem); }
 
     .redes a{
       display: inline-block;
@@ -367,6 +377,16 @@
         height: 3px;
         background: var(--texto-claro);
         border-radius: 5px;
+      }
+
+      /* Ajuste de fondo en móvil */
+      .hero{
+        min-height: 60vh;
+        background-position: center top;
+      }
+      .bg-nosotros, .bg-elegante{
+        min-height: 50vh;
+        background-position: center center;
       }
     }
   </style>
