--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
       background: #f8fafc;
       color: #1d2430;
     }
+    /* 🎄 LUCES NAVIDEÑAS EN EL NAVBAR */
+.nav-lights {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 10px;
+display: flex;
+justify-content: space-around;
+pointer-events: none;
+}
 
     /* NAVBAR */
     nav{
